Install method-overrid and Add delete charterer feature

--- a/views/editFixture.hbs
+++ b/views/editFixture.hbs
@@ -1,6 +1,6 @@
 <div class="container form-group mt-5">
   {{!-- {{> messages}} --}}
-  <form action="/admin/edit/fixtures/{{fixture.id}}" method="POST">
+  <form action="/admin/edit/fixtures/{{fixture.id}}?_method=PUT" method="POST">
     {{!-- title --}}
     <div class="row mb-5 form-group">
       <div class="col-2">
