--- a/views/editVslPosition.hbs
+++ b/views/editVslPosition.hbs
@@ -1,6 +1,6 @@
 <div class="container form-group mt-5">
   {{!-- {{> messages}} --}}
-  <form action="/admin/edit/positionlist/{{vessel.id}}" method="POST">
+  <form action="/admin/edit/positionlist/{{vessel.id}}?_method=PUT" method="POST">
     {{!-- title --}}
     <div class="row mb-5">
       <div class="col-2">
