Add delete fixtures feature

--- a/views/postCharterer.hbs
+++ b/views/postCharterer.hbs
@@ -23,7 +23,7 @@
       {{this.name}}
     </div>
     <div class="col-2">
-      <form action="/admin/charterer/{{this.id}}?_method=DELETE" method="POST">
+      <form action="/admin/charterers/{{this.id}}?_method=DELETE" method="POST">
         <button type="submit" class="btn btn-primary">刪除</button>
       </form>
     </div>
