Install express-session

--- a/views/vessel.hbs
+++ b/views/vessel.hbs
@@ -38,7 +38,8 @@
         <h5>Latest Fixture: </h5>
       </div>
       <div class="col-9">
-        <h5>YML ext 3-6mos USD: 6500</h5>
+        <h5>{{latestFixture.Charterer.name}} / USD: {{latestFixture.hire}}-period upto Min:
+          {{latestFixture.minPeriod}}/Max: {{latestFixture.maxPeriod}}</h5>
       </div>
 
     </div>
