--- a/views/postVessel.handlebars
+++ b/views/postVessel.handlebars
@@ -1,5 +1,5 @@
 <div class="container form-group mt-5">
-  {{!-- {{> messages}} --}}
+  {{> messages}}
   <form action="/admin/postVessel" method="POST">
     {{!-- title --}}
     <div class="row mb-5">
