--- a/views/partials/messages.handlebars
+++ b/views/partials/messages.handlebars
@@ -1,31 +1,19 @@
-{{#if errors}}
-{{#each errors}}
+{{#if success_messages}}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  {{{success_messages}}}
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">×</span>
+  </button>
+</div>
+{{/if}}
+{{#each error_messages}}
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
-  {{{this.message}}}
+  {{{this.error_messages}}}
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">×</span>
   </button>
 </div>
 {{/each}}
-{{/if}}
-{{#if success_msg}}
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-  {{{success_msg}}}
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">×</span>
-  </button>
-</div>
-{{/if}}
-
-{{#if error_msg}}
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-  {{{error_msg}}}
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">×</span>
-  </button>
-</div>
-{{/if}}
-
 {{#if warning_msg}}
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
   {{{warning_msg}}}
