hotfix: editVslposition page

--- a/views/editVslPosition.handlebars
+++ b/views/editVslPosition.handlebars
@@ -16,7 +16,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="name" name="name" value="{{{vessel.name}}}">
+        <input class="form-control" type="text" placeholder="name" name="name" value="{{vessel.name}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -25,7 +25,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="IMONumber" name="IMONumber" value="{{{vessel.IMONumber}}}"
+        <input class="form-control" type="text" placeholder="IMONumber" name="IMONumber" value="{{vessel.IMONumber}}"
           required="required">
       </div>
     </div>
@@ -35,7 +35,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="BLT" name="blt" value="{{{vessel.blt}}}">
+        <input class="form-control" type="text" placeholder="BLT" name="blt" value="{{vessel.blt}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -44,7 +44,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="Type" name="type" value="{{{vessel.type}}}">
+        <input class="form-control" type="text" placeholder="Type" name="type" value="{{vessel.type}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -53,7 +53,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="Teu" name="teu" value="{{{vessel.teu}}}">
+        <input class="form-control" type="text" placeholder="Teu" name="teu" value="{{vessel.teu}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -62,7 +62,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="homo" name="homo" value="{{{vessel.homo}}}">
+        <input class="form-control" type="text" placeholder="homo" name="homo" value="{{vessel.homo}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -71,7 +71,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="reefer" name="reefer" value="{{{vessel.reefer}}}">
+        <input class="form-control" type="text" placeholder="reefer" name="reefer" value="{{vessel.reefer}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -80,7 +80,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="dwt" name="dwt" value="{{{vessel.dwt}}}">
+        <input class="form-control" type="text" placeholder="dwt" name="dwt" value="{{vessel.dwt}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -89,7 +89,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="draft" name="draft" value="{{{vessel.draft}}}">
+        <input class="form-control" type="text" placeholder="draft" name="draft" value="{{vessel.draft}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -98,7 +98,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="gear" name="gear" value="{{{vessel.gear}}}">
+        <input class="form-control" type="text" placeholder="gear" name="gear" value="{{vessel.gear}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -107,7 +107,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="LOA" name="loa" value="{{{vessel.loa}}}">
+        <input class="form-control" type="text" placeholder="LOA" name="loa" value="{{vessel.loa}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -116,7 +116,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="Beam" name="beam" value="{{{vessel.beam}}}">
+        <input class="form-control" type="text" placeholder="Beam" name="beam" value="{{vessel.beam}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -125,7 +125,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="Spd/Con" name="spdcon" value="{{{vessel.spdcon}}}">
+        <input class="form-control" type="text" placeholder="Spd/Con" name="spdcon" value="{{vessel.spdcon}}">
       </div>
     </div>
     <div class="row mb-2">
@@ -134,7 +134,7 @@
         </label>
       </div>
       <div class="col-6">
-        <input class="form-control" type="text" placeholder="place" name="place" value="{{{vessel.place}}}">
+        <input class="form-control" type="text" placeholder="place" name="place" value="{{vessel.place}}">
       </div>
     </div>
     {{!-- date --}}
@@ -143,7 +143,7 @@
         <label class="col-form-label col-form-label-lg" for="opendate">OpenDate:</label>
       </div>
       <div class="input-group date col-6" id="datetimepicker1">
-        <input class="form-control" type="date" placeholder="opendate" name="opendate" value="{{{vessel.opendate}}}">
+        <input class="form-control" type="date" placeholder="opendate" name="opendate" value="{{vessel.opendate}}">
         <span class="input-group-addon">
           <span class="glyphicon glyphicon-calendar"></span>
         </span>
