--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,18 +36,6 @@
               {{/if}}
 
               <li class="nav-item">
-                <a class="nav-link" href="#">English</a>
-              </li>
-              <li class="nav-item mt-2">
-                |
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">繁中</a>
-              </li>
-              <li class="nav-item mt-2">
-                |
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="/">回首頁</a>
               </li>
             </ul>
@@ -57,7 +45,7 @@
           <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="/introduction">公司簡介</a>
+                <a class="nav-link" href="/introduction/history">公司簡介</a>
               </li>
               <li class="nav-item mt-2">
                 |
