--- a/views/market.handlebars
+++ b/views/market.handlebars
@@ -15,7 +15,7 @@
     <div class="intro-bf ml-3 mt-3">
       <h4>Container Fixture Report</h4>
       <div class="marketListBox mt-1">
-        <ul class="marketList">
+        {{!-- <ul class="marketList">
           <li>
             <a href="#">
               <div class="marketListItem">11/5-11/11 台灣貨櫃船 成交報導</div>
@@ -28,7 +28,7 @@
               <div class="marketTime">2017-11-13 </div>
             </a>
           </li>
-        </ul>
+        </ul> --}}
       </div>
       {{!-- <div class="pagination">分頁在這</div> --}}
     </div>
