--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -17,25 +17,57 @@
           <div class="memberName">Lanner Cheng | 程可璋</div>
           <div class="memberData mt-1">
             <div class="memberOffice">886-2-2781-9796</div>
-            <div class="memberMob">886-932-024-423 </div>
+            <div class="memberMob">886-932-024-423</div>
             <div class="memberEmail">lanner@arkshipping.com.tw</div>
           </div>
         </div>
 
         <div class="memberBox">
-          <div class="memberName">Lanner Cheng | 程可璋</div>
+          <div class="memberName">Seaway Cheng | 程希偉</div>
           <div class="memberData mt-1">
-            <div class="memberOffice">886-2-2781-9796</div>
-            <div class="memberMob">886-932-024-423 </div>
-            <div class="memberEmail">lanner@arkshipping.com.tw</div>
+            <div class="memberOffice">886-2-2781-0084</div>
+            <div class="memberMob">886-936-110-313</div>
+            <div class="memberEmail">seaway@arkshipping.com.tw</div>
           </div>
         </div>
         <div class="memberBox">
-          <div class="memberName">Lanner Cheng | 程可璋</div>
+          <div class="memberName">Gloria Han | 韓慧文</div>
           <div class="memberData mt-1">
-            <div class="memberOffice">886-2-2781-9796</div>
-            <div class="memberMob">886-932-024-423 </div>
-            <div class="memberEmail">lanner@arkshipping.com.tw</div>
+            <div class="memberOffice">886-2-2781-0082</div>
+            <div class="memberMob">886-933-328-598</div>
+            <div class="memberEmail">gloria@arkshipping.com.tw</div>
+          </div>
+        </div>
+        <div class="memberBox">
+          <div class="memberName">Jeff Cheng | 程俊傑</div>
+          <div class="memberData mt-1">
+            <div class="memberOffice">886-2-2781-0118</div>
+            <div class="memberMob">886-905-398-185</div>
+            <div class="memberEmail">jeff@arkshipping.com.tw</div>
+          </div>
+        </div>
+        <div class="memberBox">
+          <div class="memberName">Isaac Pan | 潘冠宏</div>
+          <div class="memberData mt-1">
+            <div class="memberOffice">886-2-2711-2207</div>
+            <div class="memberMob">886-910-801-355</div>
+            <div class="memberEmail">isaac@arkshipping.com.tw</div>
+          </div>
+        </div>
+        <div class="memberBox">
+          <div class="memberName">Steven Chou | 周成舟</div>
+          <div class="memberData mt-1">
+            <div class="memberOffice">886-2-2781-1247</div>
+            <div class="memberMob">886-970-076-206</div>
+            <div class="memberEmail">steven@arkshipping.com.tw</div>
+          </div>
+        </div>
+        <div class="memberBox">
+          <div class="memberName">Jerry Lai | 賴志承</div>
+          <div class="memberData mt-1">
+            <div class="memberOffice">886-2-2781-1247</div>
+            <div class="memberMob">886-912-518-455</div>
+            <div class="memberEmail">jerry@arkshipping.com.tw</div>
           </div>
         </div>
 
