--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,11 +51,11 @@
                 |
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/services">服務項目</a>
+                <a class="nav-link" href="/services/container">服務項目</a>
               </li>
               <li class="nav-item mt-2">|</li>
               <li class="nav-item">
-                <a class="nav-link" href="/market">市場分析</a>
+                <a class="nav-link" href="/market/container">市場分析</a>
               </li>
               <li class="nav-item mt-2">|</li>
               <li class="nav-item">
